start fixing sonar issues